--- a/css/fau-theme-editor-style.css
+++ b/css/fau-theme-editor-style.css
@@ -5971,7 +5971,8 @@ img.aligncenter {
 svg {
   max-width: 100%;
   max-height: 100%;
-  fill: var(--color-primary-basis);
+  height: auto;
+  fill: var(--color-FAU);
 }
 
 main img {
