--- a/src/sass/elements/_images.scss
+++ b/src/sass/elements/_images.scss
@@ -56,7 +56,8 @@ img {
 svg {
     max-width: 100%;
     max-height: 100%;
-    fill: var(--color-primary-basis);
+    height: auto;
+    fill: var(--color-FAU);
 }
 
 main {	
