--- a/src/sass/_custom-properties.scss
+++ b/src/sass/_custom-properties.scss
@@ -58,6 +58,9 @@
     --color-submenu-currentpage-bg: #{$color-submenu-currentpage-bg};
     --color-submenu-currentpage-text: #{$color-submenu-currentpage-text};
 
+    --color-menulink-hover-text: #{$color-menulink-hover-text};
+    --color-menulink-hover-bg: #{$color-menulink-hover-bg}; 
+    
 
 }
 
