--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -182,6 +182,8 @@ Mixins File for Wordpress Theme FAU
     &:focus {
 	font-weight: bold;
 	color: inherit;
+	box-shadow: inherit;
+	text-decoration: underline;
     }
 }
 
