--- a/src/sass/structure/navigation/_portalmenus.scss
+++ b/src/sass/structure/navigation/_portalmenus.scss
@@ -65,17 +65,11 @@
 			    position: relative;
 			    width: 220px;
 			    height: 110px;
-			    @media (min-width: $screen-xs) and (max-width: $screen-sm - 1) {
-				width: calc(50vw - 25px);
-				height: calc( (50vw - 25px) / 2);
-			    }
-			     
+			    			     
 			    img {
-				position: absolute;
-				left: 50%;
-				top: 50%;
-				transform: translate(-50%, -50%);
-				object-fit: contain;
+				height: inherit;
+				width: inherit;
+				object-fit: cover;
 				box-shadow: none;
 			    }
 			    svg {
@@ -247,13 +241,12 @@
          }
       }
       > div + p, > div + span.portaltop {
-      	position: absolute;
       	bottom: 0;
       	padding: 0;
       	width: 100%;
       }
       span.portaltop {
-      	background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.7) 100%);
+      //	background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.7) 100%);
       	width: 100%;
       	padding: 0;
       }
@@ -261,9 +254,9 @@
 	background-color: $PalettonDunkelste;
       }
       span.portaltop a {
-      	color: var(--color-primary-basis-kontrast);
+    //  	color: var(--color-primary-basis-kontrast);
       	line-height: 1.25;
-      	text-shadow: 1px 1px 3px black;
+    //  	text-shadow: 1px 1px 3px black;
       	display: block;
       	padding: 8px 10px;
         &:hover {
@@ -290,35 +283,16 @@
     &.contentmenutype2 {
       .subpages-menu {
         li {
-          width:calc(50% - 10px);
-          height:calc((50vw - 10px) / 300 * 200)
+          width: 300px;
+          height: 150px;
         }
-        @media (min-width: $screen-xs){
-          li {
-            width:220px;
-            height:147px;
-          }
-        }
-        @media (max-width: $screen-xs - 1){
-          li {
-            max-width: 220px;
-          }
-          li:nth-of-type(2n+1) {
-            clear: both;
-          }
-        }
-        @media (min-width: $screen-xs) and (max-width: $screen-sm - 1){
-          li {
-            max-width: 220px;
-            margin-right: calc(50% - 240px);
-    	     }
-        }
+        
       }
     }
     &.contentmenutype3 {
       .subpages-menu {
         li {
-          width: 320px;
+          width: 480px;
           height: auto;
  
         } 
