debugmodi für sprachschalter und orga breadcrumb

--- a/src/sass/structure/header/_branding.scss
+++ b/src/sass/structure/header/_branding.scss
@@ -130,26 +130,24 @@
 		    color: var(--color-FAU);
 		}
 		.phil {
-		    color: var(--color-phil-basis);
+		    color: var(--color-phil-ci-hell);
 		}
 		.nat {
-		    color: var(--color-nat-basis);
+		    color: var(--color-nat-ci-hell);
 		}
 		.med {
-		    color: var(--color-med-basis);
+		    color: var(--color-med-ci-hell);
 		}
 		.rw {
-		    color: var(--color-rw-basis);
+		    color: var(--color-rw-ci-hell);
 		}
 		.tf {
-		    color: var(--color-tf-basis);
+		    color: var(--color-tf-ci-hell);
 		}
 		.website-shortcut::before {
 		    content: "| ";
 		} 
-		.visible-title {
-		    
-		}
+
 		a {
 		    text-decoration: none;
 		}
