orga breadcrumb anpassungen

--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -17,78 +17,34 @@
   --color-primary-ci-hell-kontrast: #fff;
   --color-primary-ci-hell2: #CED9E7;
   --color-primary-ci-hell2-kontrast: #000;
+  --color-primary-basis: #04316A;
+  --color-primary-basis-kontrast: #fff;
+  --color-primary-ci-hell: #04316A;
+  --color-primary-ci-hell-kontrast: #fff;
   --color-zentral-basis: #04316A;
   --color-zentral-basis-kontrast: #fff;
-  --color-zentral-heller: #8fb1ef;
-  --color-zentral-hellste: #dde5f0;
-  --color-zentral-dunkler: #004A9F;
-  --color-zentral-dunkler-kontrast: #fff;
-  --color-zentral-dunkelste: #041E42;
-  --color-zentral-dunkelste-kontrast: #fff;
   --color-zentral-ci-hell: #04316A;
   --color-zentral-ci-hell-kontrast: #fff;
-  --color-zentral-ci-hell2: #CED9E7;
-  --color-zentral-ci-hell2-kontrast: #000;
   --color-phil-basis: #963B2F;
   --color-phil-basis-kontrast: #fff;
-  --color-phil-heller: #d9c689;
-  --color-phil-hellste: #f3eedf;
-  --color-phil-dunkler: #E46D41;
-  --color-phil-dunkler-kontrast: #000;
-  --color-phil-dunkelste: #963B2F;
-  --color-phil-dunkelste-kontrast: #fff;
   --color-phil-ci-hell: #FDB735;
   --color-phil-ci-hell-kontrast: #000;
-  --color-phil-ci-hell2: #F4E8CB;
-  --color-phil-ci-hell2-kontrast: #000;
   --color-med-basis: #005287;
   --color-med-basis-kontrast: #fff;
-  --color-med-heller: #bfd6f5;
-  --color-med-hellste: #eaf3fc;
-  --color-med-dunkler: #005287;
-  --color-med-dunkler-kontrast: #fff;
-  --color-med-dunkelste: #003E61;
-  --color-med-dunkelste-kontrast: #fff;
   --color-med-ci-hell: #18B4F1;
   --color-med-ci-hell-kontrast: #000;
-  --color-med-ci-hell2: #B9D9EC;
-  --color-med-ci-hell2-kontrast: #000;
   --color-nat-basis: #266141;
   --color-nat-basis-kontrast: #fff;
-  --color-nat-heller: #aacfbd;
-  --color-nat-hellste: #e5efea;
-  --color-nat-dunkler: #266141;
-  --color-nat-dunkler-kontrast: #fff;
-  --color-nat-dunkelste: #14462D;
-  --color-nat-dunkelste-kontrast: #fff;
   --color-nat-ci-hell: #7BB725;
   --color-nat-ci-hell-kontrast: #000;
-  --color-nat-ci-hell2: #CFE0D8;
-  --color-nat-ci-hell2-kontrast: #000;
   --color-rw-basis: #971B2F;
   --color-rw-basis-kontrast: #fff;
-  --color-rw-heller: #c5ac94;
-  --color-rw-hellste: #F2DED1;
-  --color-rw-dunkler: #971B2F;
-  --color-rw-dunkler-kontrast: #fff;
-  --color-rw-dunkelste: #662938;
-  --color-rw-dunkelste-kontrast: #fff;
   --color-rw-ci-hell: #C50F3C;
   --color-rw-ci-hell-kontrast: #fff;
-  --color-rw-ci-hell2: #F2DED1;
-  --color-rw-ci-hell2-kontrast: #000;
   --color-tf-basis: #2F586E;
   --color-tf-basis-kontrast: #fff;
-  --color-tf-heller: #d2d5d7;
-  --color-tf-hellste: #ebecee;
-  --color-tf-dunkler: #2F586E;
-  --color-tf-dunkler-kontrast: #fff;
-  --color-tf-dunkelste: #204251;
-  --color-tf-dunkelste-kontrast: #fff;
   --color-tf-ci-hell: #8C9FB1;
   --color-tf-ci-hell-kontrast: #000;
-  --color-tf-ci-hell2: #D3DDE6;
-  --color-tf-ci-hell2-kontrast: #000;
   --color-Text: #444;
   --color-TextLight: #797676;
   --color-MetaTextDefault: #444;
@@ -106,7 +62,6 @@
   --color-KontrastHell: #fff;
   --color-KontrastDunkel: #333;
   /* Calculated Values */
-  --color-primary-basis-lighten15: #04316A;
   --color-MetaHomeBackground: #d4d4d4;
   --color-MetaHover: #264c7b;
   --color-MetaText: #fff;
