--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -94,7 +94,7 @@ Mixins File for Wordpress Theme FAU
     @include no-list;
     background: none;
     display: table;
-    border-bottom: 1px solid var(--color-primary-hellste);
+    border-bottom: 1px solid var(--color-primary-ci-hell);
     width: 100%;
 			
 
