--- a/src/sass/structure/hero/_breadcrumb.scss
+++ b/src/sass/structure/hero/_breadcrumb.scss
@@ -3,67 +3,24 @@
 /*-----------------------------------------------------------------------------------*/
 
 #hero {
-    &.hero-small {
-	    @if $colorstyle == '2021' {
-		background: var(--color-hero-bg);		
-            } @else {
-		@include radial-gradient(var(--color-hero-bg), var(--color-primary-basis-lighten15));
+    .breadcrumbs {
+	    color: var(--color-hero-text);
+	    padding: 10px 0;
+	    position: relative;
+	    z-index: 10;
+
+	    @include px2rem($font-size-breadcrumb);
+
+	    span {
+		    padding: 0 5px;
+	    }	
+
+	    .single & .active {
+		display: none;	  
 	    }
-	
-        overflow:hidden;
-	
-	p.presentationtitle,
-	h1 {
-	    padding: 0;
-	    margin: 20px 0;
-	   
-	    @media (min-width: $screen-sm ) {
-		padding: 30px 0 10px 0;
+
+	    .breadcrumb_sitetitle {
+		@include px2rem($font-size-breadcrumb);
 	    }
-	}
-
-    }    
-    .hero-content {
-	 z-index: 10;
     }
-    .single & p.presentationtitle {
-	display: none;
-	@media (min-width: $screen-sm ) {
-	    display: inline-block;
-	}
-    }
-     
-    
 }
-
-
-
-
-.breadcrumbs {
-	color: var(--color-hero-text);
-	padding: 10px 0;
-	position: relative;
-	z-index: 10;
-	
-	@include px2rem($font-size-breadcrumb);
-	
-	span {
-		padding: 0 5px;
-	}	
-	
-	.single & .active {
-	    display: none;	  
-	}
-}
-
-
-
-h3.breadcrumb_sitetitle {
-	font-size: 14px;
-	font-weight: normal;
-	line-height: 18px;
-	margin-bottom: -5px;
-	color: var(--color-hero-text);
-}
-	
-	
