--- a/src/sass/structure/hero/_breadcrumb.scss
+++ b/src/sass/structure/hero/_breadcrumb.scss
@@ -22,5 +22,9 @@
 	    .breadcrumb_sitetitle {
 		@include px2rem($font-size-breadcrumb);
 	    }
+	    
+	    span.active {
+		display: none;
+	    }
     }
 }
