--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -3006,6 +3006,39 @@ CSS Font File for Wordpress Theme FAU
   font-weight: normal;
   font-style: normal;
 }
+/*
+FAU Chimera
+
+This font consists of components of the Roboto and Hind fonts. Please see the following details of the separate font packages:
+
+Roboto:
+- Copyright: Copyright 2011 Google Inc. all rights reserved.
+- Trademark: Roboto is a trademark of Google.
+- Licensed under the Apache License, version 2.0.
+- License URL: http://www.apache.org/licenses/LICENSE-2.0
+- Designer: Google - Christian Robertson - Google.com
+
+Hind:
+- Copyright: Copyright (c) 2014 Indian Type Foundry.
+- Trademark: Hind is a trademark of Indian Type Foundry.
+- Licensed under the SIL Open Font License, version 1.1. This license is available with an FAQ at: http://scripts.sil.org/OFL
+- Designer: Manushi Parikh, Satya Rajpurohit - http://www.indiantypefoundry.com
+- Producer: Indian Type Foundry - http://www.indiantypefoundry.com
+
+
+*/
+@font-face {
+  font-family: "FAU Chimera";
+  src: local("FAU Chimera"), url("./fonts/fau-chimera//FAU-Chimera-Regular.woff2") format("woff2"), url("./fonts/fau-chimera//FAU-Chimera-Regular.woff") format("woff"), url("./fonts/fau-chimera//FAU-Chimera-Regular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+@font-face {
+  font-family: "FAU Chimera";
+  src: local("FAU Chimera"), url("./fonts/fau-chimera//FAU-Chimera-Medium.woff2") format("woff2"), url("./fonts/fau-chimera//FAU-Chimera-Medium.woff") format("woff"), url("./fonts/fau-chimera//FAU-Chimera-Medium.ttf") format("truetype");
+  font-style: normal;
+  font-weight: medium;
+}
 /*-----------------------------------------------------------------------------------*/
 /* Backend CSS
 /*-----------------------------------------------------------------------------------*/
