--- a/css/fau-theme-gutenberg.css
+++ b/css/fau-theme-gutenberg.css
@@ -4462,6 +4462,39 @@ CSS Font File for Wordpress Theme FAU
   font-style: normal;
 }
 /*
+FAU Chimera
+
+This font consists of components of the Roboto and Hind fonts. Please see the following details of the separate font packages:
+
+Roboto:
+- Copyright: Copyright 2011 Google Inc. all rights reserved.
+- Trademark: Roboto is a trademark of Google.
+- Licensed under the Apache License, version 2.0.
+- License URL: http://www.apache.org/licenses/LICENSE-2.0
+- Designer: Google - Christian Robertson - Google.com
+
+Hind:
+- Copyright: Copyright (c) 2014 Indian Type Foundry.
+- Trademark: Hind is a trademark of Indian Type Foundry.
+- Licensed under the SIL Open Font License, version 1.1. This license is available with an FAQ at: http://scripts.sil.org/OFL
+- Designer: Manushi Parikh, Satya Rajpurohit - http://www.indiantypefoundry.com
+- Producer: Indian Type Foundry - http://www.indiantypefoundry.com
+
+
+*/
+@font-face {
+  font-family: "FAU Chimera";
+  src: local("FAU Chimera"), url("./fonts/fau-chimera//FAU-Chimera-Regular.woff2") format("woff2"), url("./fonts/fau-chimera//FAU-Chimera-Regular.woff") format("woff"), url("./fonts/fau-chimera//FAU-Chimera-Regular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+@font-face {
+  font-family: "FAU Chimera";
+  src: local("FAU Chimera"), url("./fonts/fau-chimera//FAU-Chimera-Medium.woff2") format("woff2"), url("./fonts/fau-chimera//FAU-Chimera-Medium.woff") format("woff"), url("./fonts/fau-chimera//FAU-Chimera-Medium.ttf") format("truetype");
+  font-style: normal;
+  font-weight: medium;
+}
+/*
 * CSS Settings for Gutenberg Editor
 */
 .edit-post-visual-editor .editor-block-list__block h1.mce-content-body,
@@ -4581,7 +4614,7 @@ table .edit-post-visual-editor .editor-block-list__block h6 {
   font-size: 1rem;
   line-height: 1.5rem;
   color: var(--color-Text);
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", "FAU Chimera", sans-serif;
 }
 .edit-post-visual-editor .editor-block-list__block p {
   -webkit-hyphens: auto;
